Add header and aside styles

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -5,12 +5,12 @@
 
 <nav>
   <ul class="container">
-    <li class="container_li">Site Map</li>
-    <li class="container_li">Contact us</li>
-    <li class="container_li">Locations</li>
-    <li class="container_li">Help</li>
-    <li class="container_li">FAQ's</li>
-    <li class="container_li">عرب</li>
     <button class="container_btn">Log out</button>
+    <li class="container_li">English</li>
+    <li class="container_li">الأسئلة الشائعة</li>
+    <li class="container_li">مساعدة</li>
+    <li class="container_li">المواقع</li>
+    <li class="container_li">اتصل بنا</li>
+    <li class="container_li">خريطة الموقع</li>
   </ul>
 </nav>
