--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -5,11 +5,12 @@
     background: linear-gradient(to bottom, rgba(240,131,41,1) 0%, rgba(240,131,41,1) 28%, rgba(118,100,93,1) 100%);
     cursor: pointer;
 
-    &::after{
-        content: "▶";
+    &::before{
+
+        content: "◀";
         font-size: 0.5rem;
         color: white;
-        margin-left:0.5rem;
+        margin-right:0.5rem;
       }
 
     &:hover{
