--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,15 +2,17 @@
 
   @include Navegator;
   background-color:$color-white;
-  justify-content: flex-end;
+  justify-content: flex-start;
   padding: 1rem 2rem; 
 
 
     &_li{
+      
     @include Item;
     }
 
     &_btn{
+      
       @include Button;  
     }
    
