--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -3,7 +3,8 @@
 
   @media all and (min-width: 700px){
     display:flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
+    
   }
  
   &_container{
@@ -23,13 +24,12 @@
       display:flex;
       flex-direction: row;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: flex-start;
       height: 3rem;
       margin-bottom: 0.3rem;
       
       &-img{
-      margin-right: 1rem;
-     
+      margin-left: 1rem;
       height: 2rem;
       }
     }
@@ -168,12 +168,12 @@
     @media all and (min-width: 700px){
       
       flex-direction: column;
-      margin:0 0 0 1rem;
+      margin:0 1rem 0 0;
 
     }
 
     &_user{
-      border:1px solid red;
+     
       padding:1rem;
       background-color: $color-general;
       margin: 0rem 0.3rem 0 0;
