Add aside styles

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -4,7 +4,7 @@
 </header> -->
 
 <nav>
-  <ul class="container">
+  <!--  <ul class="container">
     <button class="container_btn">Log out</button>
     <li class="container_li">English</li>
     <li class="container_li">الأسئلة الشائعة</li>
@@ -12,5 +12,15 @@
     <li class="container_li">المواقع</li>
     <li class="container_li">اتصل بنا</li>
     <li class="container_li">خريطة الموقع</li>
+  </ul> -->
+
+  <ul class="container">
+    <li class="container_li">خريطة الموقع</li>
+    <li class="container_li">اتصل بنا</li>
+    <li class="container_li">المواقع</li>
+    <li class="container_li">مساعدة</li>
+    <li class="container_li">الأسئلة الشائعة</li>
+    <li class="container_li">English</li>
+    <button class="container_btn">Log out</button>
   </ul>
 </nav>
