--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -93,7 +93,7 @@
     <section class="main_aside_status">
 
       <div class="main_aside_status_help">
-        <h1 class="main_aside_status_help-h1">Did you know...?</h1>
+        <h1 class="main_aside_status_help-h1">?...Did you know</h1>
         <div class=" main_aside_status_help-cube">--</div>
       </div>
 
@@ -101,9 +101,10 @@
 
         <p class="main_aside_status_demo-description">You can customize "My status" by rearranging the modules.</p>
 
-        <p class="main_aside_status_demo-cta">Watch demo</p>
-        <img class="main_aside_status_demo-tv" src="./assets/images/i-w-watch.png" alt="tv icon">
-
+        <div class="main_aside_status_demo_cta">
+          <p class="main_aside_status_demo_cta-p">Watch demo</p>
+          <img class="main_aside_status_demo_cta-tv" src="./assets/images/i-w-watch.png" alt="tv icon">
+        </div>
       </div>
 
     </section>
