--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,7 @@
 
   @include Navegator;
   background-color:$color-white;
-  justify-content: flex-start;
+  justify-content: flex-end;
   padding: 1rem 2rem; 
 
 
