--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -24,7 +24,7 @@
 
 @mixin Navegator{
     display:flex;
-    flex-direction: row; 
+    flex-direction: row-reverse; 
     align-items: center; 
 }
 
