Add footer styles

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <nav>
     <ul class="footer_menu">
-      <li class="footer_menu-element">Site Map</li>
-      <li class="footer_menu-element">Contact us</li>
-      <li class="footer_menu-element">Locations</li>
-      <li class="footer_menu-element">Help</li>
-      <li class="footer_menu-element">FAQ's</li>
-      <li class="footer_menu-element">عرب</li>
+      <li class="footer_menu-element">خريطة الموقع</li>
+      <li class="footer_menu-element">اتصل بنا</li>
+      <li class="footer_menu-element">المواقع</li>
+      <li class="footer_menu-element">مساعدة</li>
+      <li class="footer_menu-element">الأسئلة الشائعة</li>
+      <li class="footer_menu-element">English</li>
     </ul>
   </nav>
   <section class="footer_terms">
