--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -10,14 +10,15 @@
         font-size: 0.5rem;
         color: white;
         margin-right:0.5rem;
-      }
+    }
 
     &:hover{
         transform: scale(1.1);
         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25),
         4px 4px 10px rgba(0, 0, 0, 0.2);
         border-radius: 0.5rem;
-    
+        background: linear-gradient(180deg, #65bce8 0%, #306485 100%);
+        transition: all .3s;
     }
 }
 
@@ -32,11 +33,17 @@
     margin: 0 0.5rem;
     color: $color-text;
     cursor: pointer;
-    
+    text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+
     &:hover{
       transform: scale(1.1);
-      transition: color ease 0.5s;
       font-weight: bold;
-      color:$color-btn;  
-}
+      color:$color-btn; 
+      background-size: 100% 2px; 
+    }
 }
