--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -31,7 +31,7 @@
       justify-content: space-between;
       background-color: $color-background;
     
-      &_title{   
+      &_title{  
         width: 30%;
         display:flex;
         flex-direction: column;
@@ -80,6 +80,7 @@
         background: $color-general;
         margin:0.2rem;
         padding: 0.3rem;
+        cursor: pointer;
 
         &:first-child{
           background: $color-feature; 
@@ -92,8 +93,19 @@
           margin:0.2rem 0.2rem 0.2rem 0;
         }
 
+        &:hover{
+          animation: rotate 3s infinite;
+          animation-name: rotate;
+          animation-duration: 3s;
+          animation-timing-function: ease;
+          animation-delay: 0s;
+          animation-iteration-count: infinite;
+          animation-direction: normal;
+          animation-fill-mode: none;
+          animation-play-state: running; 
+      }
+
         &-img{
-         
           height: 1.5rem;
         }
 
@@ -177,6 +189,11 @@
           display:flex;
           flex-direction:row-reverse;
           margin: 0.5rem 0 0.5rem 0;
+          cursor: pointer;
+
+          &:hover{
+            font-weight: bold;
+          }
      
           &-img{
             width: 1rem;
@@ -191,14 +208,11 @@
     }
 
     &_status{
-      
       padding:1rem;
       background-color: $color-background;
       color: $color-white;
       
-
       &_help{
-        
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
@@ -213,12 +227,12 @@
           width: 1rem;
           height: 1rem;
           background-color: $color-feature;
-         text-align: center;
+          text-align: center;
+          cursor: pointer;
         }
       }
 
       &_demo{
-    
         display:flex;
         flex-direction:row-reverse;
         background-color: $color-white;
@@ -252,6 +266,11 @@
           &-p{
             color:$color-btn;
             margin-left: 0.3rem;
+            cursor: pointer;
+
+            &:hover{
+              color: $color-general;
+            }
    
             @media (min-width: 800px){
              margin-left: 1rem;
@@ -260,10 +279,24 @@
            }
    
            &-tv{
-            height: 1rem;    
+            height: 1rem; 
+            cursor: pointer;
+            
+            &:hover{
+              border-radius: 100%;
+            }
             }
         }
       }
     }
+  }
+}
+
+@keyframes rotate {
+  0%, 100% {
+  transform: rotate(-10deg);
+  }
+  50% {
+  transform: rotate(10deg);
   }
 }
