Change page footer text align

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -11,10 +11,10 @@
   </nav>
   <section class="footer_terms">
     <div class="footer_terms_div">
-      <p class="footer_terms_div-p">Online Security Policy</p>
+      <p class="footer_terms_div-p">سياسة الأمن عبر الإنترنت</p>
       <span class="footer_terms_div-span">|</span>
-      <p class="footer_terms_div-p"> Agreements and Terms and Conditions</p>
+      <p class="footer_terms_div-p">الاتفاقيات والشروط والأحكام</p>
     </div>
-    <p class="footer_terms_copyright">Copyright &copy; 2020 XXXX Bank. All rights reserved</p>
+    <p class="footer_terms_copyright"> النشر © 2020 بنك كل الحقوق محفوظة</p>
   </section>
 </footer>
