--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -59,7 +59,7 @@
     </section>
 
     <section class="main_container_footer">
-      <p class="main_container_footer-p">Your are in: <span class="main_container_footer-span">Home</span></p>
+      <p class="main_container_footer-p">Home<span class="main_container_footer-span"> :Your are in</span></p>
     </section>
 
   </section>
