--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -22,7 +22,7 @@
 
     &_div{
       display: flex;
-      flex-direction: row;
+      flex-direction: row-reverse;
       color:$color-feature;
       
       &-span{
