--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -78,7 +78,7 @@
 
         <div class="main_aside_user_options-icon">
           <img class="main_aside_user_options-icon-img" src="./assets/images/b-cr-img1.png" alt="Mechanic icon">
-          <p class="main_aside_user_options-icon-p">My Almubasher</p>
+          <p class="main_aside_user_options-icon-p">My Al Mubasher</p>
         </div>
 
         <div class="main_aside_user_options-icon">
